Fix issue where the text of the types tooltip is not visible when using some UI themes

--- a/styles/elmjutsu.less
+++ b/styles/elmjutsu.less
@@ -180,7 +180,7 @@ atom-text-editor.elmjutsu-pipe-selections.processing {
     }
   }
 }
-.elmjutsu-hint-tooltip {
+.elmjutsu-hint-tooltip.tooltip {
   margin: 0 !important;
   .tooltip-inner {
     padding: 4px !important;
